[gd_scene load_steps=2 format=3 uid="uid://x8a73h373id5"]

[ext_resource type="Script" path="res://menuInfo.gd" id="1_t2eno"]

[node name="MenuInfo" type="Control"]
z_index = 3
layout_mode = 3
anchor_left = 0.2
anchor_top = 0.08
anchor_right = 0.92
anchor_bottom = 0.92
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t2eno")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Close" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "X"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 50

[node name="NameVBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="CodeVBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="DescriptionLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CodeVBoxContainer"]
layout_mode = 2

[node name="CodeEdit" type="CodeEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CodeVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
editable = false

[node name="LoadButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CodeVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
text = "Load"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CodeVBoxContainer/LoadButton" to="." method="_on_load_pressed"]
